--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.7",
     "chart.js": "^4.5.0",
+    "jwt-decode": "^4.0.0",
     "ng2-charts": "^8.0.0",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
